<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_SideRightUO"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_mode"
    android:visibility="visible"
    tools:context=".SideRightFragmentUserOptions">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/iv_sruoredditicon"
            android:layout_width="128dp"
            android:layout_height="44dp"
            android:layout_margin="15dp"
            android:background="@drawable/reddit"
            app:layout_constraintBottom_toTopOf="@id/tv_sruotestmessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sruotestmessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/testmessage"
            android:textAlignment="center"
            android:textColor="@color/grey_semidark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_sruoredditicon" />

        <EditText
            android:id="@+id/et_sruouser"
            android:layout_width="230dp"
            android:layout_height="35dp"
            android:layout_margin="15dp"
            android:background="@drawable/rectangle_round_grey_dark"
            android:ems="10"
            android:gravity="start|center"
            android:hint="@string/user"
            android:inputType="textWebEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/grey_light"
            android:textColorHint="@color/grey_semidark"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/et_sruopassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sruotestmessage" />

        <EditText
            android:id="@+id/et_sruopassword"
            android:layout_width="230dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_round_grey_dark"
            android:ems="10"
            android:gravity="start|center"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:textAlignment="center"
            android:textColor="@color/grey_light"
            android:textColorHint="@color/grey_semidark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_sruouser" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_sroutermsofuse"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:textSize="9sp"
            android:background="@color/transparent"
            android:text="@string/termsofuse"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/grey_semidark"
            app:layout_constraintBottom_toTopOf="@+id/bt_sruocontinue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_sruopassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_sruocontinue"
            android:layout_width="230dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_round_red"
            android:text="@string/Continuetext"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/grey_light"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sroutermsofuse" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>