<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    android:background="@color/dark_mode"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ly_superiorbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/dark_mode"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">
    </LinearLayout>

    <View
        android:id="@+id/SuperiorLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_dark"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_feed"
        app:layout_constraintTop_toTopOf="@id/SuperiorLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/grey_dark"
        app:layout_constraintBottom_toTopOf="@id/ly_navigationbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:baselineAligned="false"
        android:id="@+id/ly_navigationbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/dark_mode"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ib_main"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/ib_main" />

            <TextView
                android:id="@+id/tv_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Principal"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ib_search"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/ib_compass" />

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_button"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ib_post"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/ib_plus" />

            <TextView
                android:id="@+id/tv_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_button"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ib_chat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/ib_chat_bubble" />

            <TextView
                android:id="@+id/tv_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chat_button"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ib_message"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/ib_bell"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_button"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="11sp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_ContentSRUO"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_width="0dp"
        android:visibility="invisible"
        android:onClick="hideSRUOfragmentOnClick"
        android:background="@color/semitransparent_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fl_SideRightFragmenUserOptions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:id="@+id/fl_SideRightFragmenUserOptions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_width="285dp"
        app:layout_constraintBottom_toBottomOf="@+id/ly_navigationbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>